Add automatic module name for Java 9 builds